@@ -30,8 +30,8 @@
             = {field: 'target', value: params.target}
           INTERMediator.additionalFieldValueOnUpdate[contextsArray[i]]
             = {field: 'target', value: params.target}
-          INTERMediator.additionalFieldValueOnDelete[contextsArray[i]]
-            = {field: 'target', value: params.target}
+          // INTERMediator.additionalFieldValueOnDelete[contextsArray[i]]
+          //   = {field: 'target', value: params.target}
         }
         while (document.getElementById('deffile').firstChild) {
           document.getElementById('deffile').removeChild(document.getElementById('deffile').firstChild);
