@@ -55,6 +55,7 @@ Ver.10 (In Development)
 - [BUG FIX] The definition file editor didn't support some keys added from Ver.8 or whatever.
 - [BUG FIX] On the master/detail navigation, Any buttons on pagination were disappeared after clicking Detail button.
 - [BUG FIX] On the MediaAccess class, container data with FileMaker_DataAPI couldn't get.
+- [BUG FIX] INTERMediator.additionalFieldValueOnDelete was not used for anything.
 
 Ver.9 (January 31, 2022)
 - [Important] Native upser authentication and LDAP direct supporting was dropped. If you want to LDAP server
